Change the line-height in the primary content and main text elements to 1.5. This also fixes the problem of logo line-height on mobile devices and the general look of the layout that did not work well when the line-height was changed in body element.

--- a/css/style.css
+++ b/css/style.css
@@ -140,17 +140,7 @@ a:hover {
 }
 
 .primary-content {
-  line-height: 1.3;
-}
-
-/* .table-of-contents {
-  margin: 3em 0;
-} */
-
-.table-of-contents li {
-  font-size: 1.1em;
-  margin-bottom: 0.5em;
-  line-height: 1.4;
+  line-height: 1.5;
 }
 
 .poem {
